debug_airtable_test.txt
  File "<string>", line 34
    print(f'Fichier present: {\
                             ^
SyntaxError: '{' was never closed
